# noctalia-shell

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CONFIG.md  CONTRIBUTING.md  CREDITS.md  LICENSE  NoctaliaGreeter.qml  NoctaliaShell.qml  README.md  SKIA_SHELL_IMPLEMENTATION_PLAN.md  THEME_REVIEW_43e16026.md  THEMING_TEMPLATES.md  example.toml  flake.nix  justfile  lefthook.yml  meson.build  meson_options.txt  shell.qml  toto.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-and-release.yml  cachix.yml  ci.yml  close-v4-issues.yml  label-issue-metadata.yml  update-aur-package.yml  update-flake.yml
.temp-icon-resolver/: ActiveWindow-with-resolver.qml  Dock-with-resolver.qml  Launcher-with-resolver.qml
Assets/: notification-rules-default.json  settings-default.json  settings-search-index.json  settings-widgets-default.json
Assets/Greeter/: hyprland.conf  niri.kdl
Assets/MatugenTemplates/: vesktop.css
Assets/Templates/: code.json  gtk.css  gtk3.css  gtk4.css  helix.toml  ksyntax-noctalia.theme  labwc.conf  ncspot.toml  pywalfox.json  qimgv.conf  telegram.tdesktop-theme
Assets/Translations/: ca.json  cs.json  de.json  en-GB.json  en.json  es.json  fr.json  hu.json  it.json  ja.json  ko-KR.json  ku.json  nl.json  nn-HN.json  nn-NO.json  pl.json  pt.json  ro.json  ru.json  sv.json  tr.json  uk-UA.json  vi.json  zh-CN.json  zh-TW.json
Bar/: Bar.qml
Bar/Modules/: Applauncher.qml  Bluetooth.qml  ClockWidget.qml  CustomTrayMenu.qml  IdleToggle.qml  Media.qml  SidePanelButton.qml  SystemInfo.qml  SystemTray.qml  Taskbar.qml  Wifi.qml  Workspace.qml
Commons/: AppSearch.qml  Color.qml  GreeterSettings.qml  I18n.qml  IconsTabler.qml  Settings.qml  ShellState.qml  Style.qml  ThemeIcons.qml  WebSearchPlugin.qml  WidgetLoader.qml
Commons/Migrations/: Migration55.qml  Migration56.qml  MigrationRegistry.qml
Components/: Cava.qml  CircularProgressBar.qml  CircularSpectrum.qml  PillIndicator.qml  ThemedSlider.qml  ToggleOption.qml
Helpers/: AdvancedMath.js  BluetoothUtils.js  IPCHandlers.qml  IdleInhibitor.qml  TrayIconResolver.js  Weather.js
Modules/Accessibility/: VirtualKeyboard.qml
Modules/AppLauncher/: AppLauncher.qml
Modules/Background/: Background.qml  LivePaper.qml  Overview.qml  ScreenCorners.qml
Modules/Bar/: Bar.qml
Modules/Cards/: AudioCard.qml  CalendarHeaderCard.qml  MediaCard.qml  ProfileCard.qml  WeatherCard.qml
Modules/DesktopWidgets/: DesktopWidgets.qml  DraggableDesktopWidget.qml
Modules/Dock/: Dock.qml  DockContent.qml  DockMenu.qml
Modules/Greeter/: BottomContainer.qml  TopContainer.qml
Modules/Launcher/: Launcher.qml
Modules/LockScreen/: BackgroundGradient.qml  CircularClock.qml  ErrorNotification.qml  LockContext.qml  LockScreen.qml  LockScreenBackground.qml  LockScreenCorners.qml  LockScreenHeader.qml  LockScreenPanel.qml  PasswordInput.qml  SessionButtons.qml
Modules/MainScreen/: AllScreens.qml  BarContentWindow.qml  BarExclusionZone.qml  BarTriggerZone.qml  MainScreen.qml  OverlayScreen.qml  PopupMenuWindow.qml  ScreenCornerWindow.qml  ScreenCorners.qml  SmartPanel.qml
Modules/Notification/: Notification.qml
Modules/OSD/: OSD.qml
Modules/SessionMenu/: SessionMenu.qml
Modules/SetupWizard/: SetupCustomizeStep.qml
Modules/SidePanel/: SidePanel.qml
Modules/Toast/: Toast.qml  ToastScreen.qml
Modules/Tooltip/: Tooltip.qml
Scripts/bash/: template-apply.sh
Scripts/python/: gtk_refresh.py
Services/: AppThemeService.qml  ArchUpdaterService.qml  BarWidgetRegistry.qml  BatteryService.qml  ColorSchemeService.qml  CompositorService.qml  GreeterService.qml  HyprlandService.qml  IPCService.qml  IdleInhibitorService.qml  LocationService.qml  MatugenService.qml  NiriService.qml  NotificationService.qml  ProgramCheckerService.qml  ScalingService.qml  SessionService.qml  UpdateService.qml  WallpaperManager.qml
Services/Compositor/: CompositorService.qml  ExtWorkspaceService.qml  HyprlandService.qml  LabwcService.qml  MangoService.qml  NiriService.qml  ScrollService.qml  SwayService.qml
Services/Control/: HooksService.qml  IPCService.qml
Settings/: Settings.qml  Theme.qml
Widgets/: Dock.qml  NBattery.qml  NBox.qml  NButton.qml  NCheckbox.qml  NCircleStat.qml  NClock.qml  NCollapsible.qml  NColorChoice.qml  NColorPickerDialog.qml  NColorSlider.qml  NComboBox.qml  NContextMenu.qml  NDateTimeTokens.qml  NFadeMask.qml  NFilePicker.qml  NGraph.qml  NGridView.qml  NIconButton.qml  NIconButtonHot.qml  NIconPicker.qml  NIconTabButton.qml  NImageRounded.qml  NLabel.qml  NLinearGauge.qml  NListView.qml  NPasswordInput.qml  NPill.qml  NPillHorizontal.qml  NPluginSettingsPopup.qml  NPopupContextMenu.qml  NReorderCheckboxes.qml  NScrollText.qml  NScrollView.qml  NSearchableComboBox.qml  NSectionEditor.qml  NSlideSwapView.qml  NSlider.qml  NSpinBox.qml  NTabBar.qml  (+5 more)
assets/: emoji.json
cmake/: PrepareWaylandProtocol.cmake
config/: bar.md  control-center.md  desktop-widgets.md  dock.md  scripted-widgets.md  services.md  shell.md  theme.md  theming-templates.md  wallpaper.md  widgets.md
cpp/: CMakeLists.txt  ProjectMItem.cpp  ProjectMItem.h  plugin.cpp  qmldir
crash/: qs-crash-1773733226.txt
nix/: devshell.nix  home-module.nix  nixos-module.nix  noctalia-live-devel.nix  package.nix  qs-noctalia.nix  runtime-deps.nix  shell.nix  treefmt.nix
protocols/: dwl-ipc-unstable-v2.xml  virtual-keyboard-unstable-v1.xml
src/: main.cpp
src/core/: Log.h  (+28 more)
tests/: animation_manager_test.cpp  app_identity_test.cpp  ico_decoder_test.cpp  image_file_loader_data_uri_test.cpp  image_source_log_test.cpp  launcher_app_categories_test.cpp  launcher_category_state_test.cpp  log_test.cpp  notification_history_utf8_test.cpp  string_utils_test.cpp  ui_control_test_stubs.cpp  wayland_toplevels_identity_test.cpp
tools/: i18n-check.py  lockscreen_layer_probe.cpp  notifications-inline-reply-test.sh  notifications-test.sh  palette-generator-analysis.py  subsurface_overflow_probe.cpp  template-engine-compare-all.py
(+1457 files in other folders)
